--- a/TaskManager.WebServer/TaskManager.WebServer.csproj
+++ b/TaskManager.WebServer/TaskManager.WebServer.csproj
@@ -294,6 +294,12 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManager.Cash\TaskManager.Cache.csproj">
+      <Project>{7403F079-0B37-4B11-9865-198DD82E7838}</Project>
+      <Name>TaskManager.Cache</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
